k8s/understand-the-wire/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: understand-the-wire
  labels:
    app.kubernetes.io/name: ingress
spec:
  ingressClassName: traefik
  rules:
  - host: www.kopilov.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service
            port: 
              number: 80
